Prepare MathML for Markdowning

--- a/files/en-us/web/mathml/element/mmultiscripts/index.html
+++ b/files/en-us/web/mathml/element/mmultiscripts/index.html
@@ -48,7 +48,7 @@ browser-compat: mathml.elements.mmultiscripts
 
 <h3 id="Using_&lt;mprescripts&gt;">Using <code>&lt;mprescripts/&gt;</code></h3>
 
-<p>Sample rendering: <img alt="" src="mmultiscripts_prescripts.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="" src="mmultiscripts_prescripts.png"></p>
 
 <p>Rendering in your browser: <math> <mmultiscripts> <mi>X</mi> <mi>d</mi> <mi>c</mi> <mprescripts></mprescripts> <mi>b</mi> <mi>a</mi> </mmultiscripts> </math></p>
 
@@ -72,7 +72,7 @@ browser-compat: mathml.elements.mmultiscripts
 
 <h3 id="Using_&lt;none&gt;">Using <code>&lt;none/&gt;</code></h3>
 
-<p>Sample rendering: <img alt="" src="mmultiscripts_none.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="" src="mmultiscripts_none.png"></p>
 
 <p>Rendering in your browser:
     <math>
