--- a/files/en-us/web/mathml/element/mphantom/index.html
+++ b/files/en-us/web/mathml/element/mphantom/index.html
@@ -25,7 +25,7 @@ browser-compat: mathml.elements.mphantom
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x+  z" src="mphantom.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x+  z" src="mphantom.png"></p>
 
 <p>Rendering in your browser: <math> <mrow> <mi> x </mi> <mo> + </mo> <mphantom> <mi> y </mi> <mo> + </mo> </mphantom> <mi> z </mi> </mrow> </math></p>
 
