--- a/files/en-us/web/mathml/element/mroot/index.html
+++ b/files/en-us/web/mathml/element/mroot/index.html
@@ -29,7 +29,7 @@ browser-compat: mathml.elements.mroot
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample Rendering: <img alt="x" src="mroot.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample Rendering: <img alt="x" src="mroot.png"></p>
 
 <p>Rendering in your browser: <math> <mroot> <mi>x</mi> <mn>3</mn> </mroot> </math></p>
 
