--- a/files/en-us/web/mathml/element/msqrt/index.html
+++ b/files/en-us/web/mathml/element/msqrt/index.html
@@ -29,7 +29,7 @@ browser-compat: mathml.elements.msqrt
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="root-x" src="msqrt.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="root-x" src="msqrt.png"></p>
 
 <p>Rendering in your browser: <math> <msqrt> <mi>x</mi> </msqrt> </math></p>
 
