--- a/files/en-us/web/mathml/element/msup/index.html
+++ b/files/en-us/web/mathml/element/msup/index.html
@@ -34,7 +34,7 @@ browser-compat: mathml.elements.msup
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x1" src="msup.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x1" src="msup.png"></p>
 
 <p>Rendering in your browser: <math> <msup> <mi>X</mi> <mn>2</mn> </msup> </math></p>
 
