--- a/files/en-us/web/mathml/element/mtable/index.html
+++ b/files/en-us/web/mathml/element/mtable/index.html
@@ -64,7 +64,7 @@ browser-compat: mathml.elements.mtable
 
 <h3 id="Alignment_with_row_number">Alignment with row number</h3>
 
-<p>Rendering: <img alt="" src="mtable-1.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Rendering: <img alt="" src="mtable-1.png"></p>
 
 <pre class="brush: html">&lt;math&gt;
 
