--- a/files/en-us/web/mathml/examples/mathml_pythagorean_theorem/index.html
+++ b/files/en-us/web/mathml/examples/mathml_pythagorean_theorem/index.html
@@ -34,7 +34,7 @@ tags:
     </mrow>
   </math>.</p>
 
-<p><strong><u>Proof:</u></strong>  We can prove the theorem algebraically by showing that the area of the big square
+<p><strong>Proof:</strong>  We can prove the theorem algebraically by showing that the area of the big square
   equals the area of the inner square (hypotenuse squared) plus the area of the four triangles: <math
     style="display: block;">
     <mtable columnalign="right center left">
