--- a/files/en-us/web/mathml/fonts/test/index.html
+++ b/files/en-us/web/mathml/fonts/test/index.html
@@ -2,7 +2,7 @@
 title: Test
 slug: Web/MathML/Fonts/Test
 ---
-<p style="width: 500px; background: white;">You should see a grid with perfectly straight black lines. If not, please consider installing some <a href="/en-US/docs/Web/MathML/Fonts">MathML fonts</a>.</p>
+<p>You should see a grid with perfectly straight black lines. If not, please consider installing some <a href="/en-US/docs/Web/MathML/Fonts">MathML fonts</a>.</p>
 <div style="width: 540px; height: 540px; background: #eef;">
   <div style="position: absolute;">
     <div style="position: absolute; left: 20px; top: 20px;">
