--- a/files/en-us/web/mathml/authoring/index.html
+++ b/files/en-us/web/mathml/authoring/index.html
@@ -277,7 +277,7 @@ sudo make install
 
 <p>Note that <a href="https://github.com/michal-h21/tex4ebook">tex4ebook</a> relies on TeX4ht to generate EPUB documents.</p>
 
-<p><a href="https://dlmf.nist.gov/LaTeXML/" name="LaTeXML">LaTeXML</a> is another tool that can generate HTML5 and EPUB documents. Windows users can watch this <a href="https://www.youtube.com/watch?v=Dg881w2e-lI">video tutorial</a>. Given a foo.tex LaTeX file, you can use these simple commands:</p>
+<p><a href="https://dlmf.nist.gov/LaTeXML/">LaTeXML</a> is another tool that can generate HTML5 and EPUB documents. Windows users can watch this <a href="https://www.youtube.com/watch?v=Dg881w2e-lI">video tutorial</a>. Given a foo.tex LaTeX file, you can use these simple commands:</p>
 
 <pre>  latexmlc --dest foo.html foo.tex # Generate a HTML5 document foo.html
   latexmlc --dest foo.epub foo.tex # Generate an EPUB document foo.epub</pre>
@@ -316,7 +316,7 @@ sudo make install
 
 <p><a href="https://github.com/fred-wang/TeXZilla">TeXZilla</a> has several interfaces, including a <a href="https://ckeditor.com/addon/texzilla">CKEditor plugin</a> used on MDN, an <a href="https://fred-wang.github.io/TeXZilla/">online demo</a>, a <a href="https://addons.mozilla.org/en-US/firefox/addon/texzilla/">Firefox add-on</a> or a <a href="https://marketplace.firefox.com/app/texzilla-1/">FirefoxOS Webapp</a>. It has also been integrated into <a href="https://www.seamonkey-project.org/">SeaMonkey</a> since version 2.28 and into <a href="https://www.mozilla.org/thunderbird/">Thunderbird</a> since version 31.<a href="http://abisource.org/"> Abiword</a> contains a small equation editor, based on itex2MML. Finally, <a href="http://www.bluegriffon.com/"> Bluegriffon</a> has an add-on to insert MathML formulas in your document, using ASCII/LaTeX-like syntax.</p>
 
-<p style="text-align: center;"><img alt="BlueGriffon" src="mathml-shot1.png"></p>
+<p><img alt="BlueGriffon" src="mathml-shot1.png"></p>
 
 <h3 id="WYSIYWG_Editors">WYSIYWG Editors</h3>
 
@@ -326,11 +326,11 @@ sudo make install
 
 <p><a href="https://www.texmacs.org/">TeXmacs</a> is a free structured editor with special facilities for mathematics, graphics and interactive sessions. TeXmacs documents can be exported in XHTML+MathML.</p>
 
-<p style="text-align: center;"><img alt="TeXmacs MathML example" src="tm-mathml-collage.png"></p>
+<p><img alt="TeXmacs MathML example" src="tm-mathml-collage.png"></p>
 
 <p><a href="https://www.openoffice.org/">OpenOffice</a> and <a href="https://libreoffice.org/">LibreOffice</a> have an equation editor (File → New → Formula). It is semi-WYSIWYG: you enter the source of the formula using the equation panel/keyboard and a preview of the formula is regularly refreshed. The editor uses its own syntax "StarMath" for the source but MathML is also generated when the document is saved. To get the MathML code, save the document as mml and open it with any text editor. Alternatively, you can extract the odf file (which is actually a zip archive) and open an xml file called <code>content.xml</code>.</p>
 
-<p style="text-align: center;"><img alt="Open Office Math" src="openoffice.png"></p>
+<p><img alt="Open Office Math" src="openoffice.png"></p>
 
 <p><a href="https://www.w3.org/Amaya/">Amaya</a> is the W3C's web editor, which is able to handle MathML inside XHTML documents. Use the Elements and the Special Chars panels to create various advanced mathematical constructs. Simple text such as <code>a+2</code> is automatically parsed and the appropriate MathML markup is generated. Once you are done, you can directly save your XHTML page and open it in Mozilla.</p>
 
@@ -338,7 +338,6 @@ sudo make install
 
 <p><a href="https://www.inftyreader.org/">Inftyreader</a> is able to perform some Optical Character Recognition, including translation of mathematical equations into MathML. Other tools can do handwriting recognition such as the <a href="https://msdn.microsoft.com/en-us/library/windows/desktop/dd371698(v=vs.85).aspx">Windows Math Input Panel</a> or the online converter <a href="https://webdemo.myscript.com/views/math.html">Web Equation</a>.</p>
 
-<div class="originaldocinfo">
 <h3 id="Original_Document_Information">Original Document Information</h3>
 
 <ul>
@@ -346,4 +345,3 @@ sudo make install
  <li>Other Contributors: Florian Scholz</li>
  <li>Copyright Information: Portions of this content are © 2010 by individual mozilla.org contributors; content available under a Creative Commons license | <a href="https://www.mozilla.org/foundation/licensing/website-content.html">Details</a>.</li>
 </ul>
-</div>
