--- a/files/en-us/web/mathml/element/mfrac/index.html
+++ b/files/en-us/web/mathml/element/mfrac/index.html
@@ -45,7 +45,7 @@ browser-compat: mathml.elements.mfrac
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="(a/b)/(c/d)" src="mfrac.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="(a/b)/(c/d)" src="mfrac.png"></p>
 
 <p>Your browser rendering: <math> <mfrac bevelled="true"> <mfrac> <mi> a </mi> <mi> b </mi> </mfrac> <mfrac> <mi> c </mi> <mi> d </mi> </mfrac> </mfrac> </math></p>
 
