--- a/files/en-us/web/mathml/element/msub/index.html
+++ b/files/en-us/web/mathml/element/msub/index.html
@@ -34,7 +34,7 @@ browser-compat: mathml.elements.msub
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x1" src="msub.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x1" src="msub.png"></p>
 
 <p>Rendering in your browser: <math> <msub> <mi>X</mi> <mn>1</mn> </msub> </math></p>
 
