--- a/files/en-us/web/mathml/element/msubsup/index.html
+++ b/files/en-us/web/mathml/element/msubsup/index.html
@@ -37,7 +37,7 @@ browser-compat: mathml.elements.msubsup
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x1" src="msubsup.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x1" src="msubsup.png"></p>
 
 <p>Rendering in your browser: <math displaystyle="true"> <msubsup> <mo> ∫</mo> <mn> 0 </mn> <mn> 1 </mn> </msubsup> </math></p>
 
