--- a/files/en-us/web/mathml/element/munder/index.html
+++ b/files/en-us/web/mathml/element/munder/index.html
@@ -35,7 +35,7 @@ browser-compat: mathml.elements.munder
 
 <h2 id="Examples">Examples</h2>
 
-<p>Sample rendering: <img alt="x+y+z" src="munder.png" style="margin-left: 10px; vertical-align: middle;"></p>
+<p>Sample rendering: <img alt="x+y+z" src="munder.png"></p>
 
 <p>Rendering in your browser: <math> <munder accentunder="true"> <mrow> <mi> x </mi> <mo> + </mo> <mi> y </mi> <mo> + </mo> <mi> z </mi> </mrow> <mo> ⏟ </mo> </munder> </math></p>
 
