--- a/files/en-us/web/mathml/index.html
+++ b/files/en-us/web/mathml/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MathMLRef}}</div>
 
-<p class="summary"><span class="seoSummary"><strong>Mathematical Markup Language (MathML)</strong> is a dialect of <a href="/en-US/docs/Web/XML">XML</a> for describing mathematical notation and capturing both its structure and content.</span></p>
+<p><strong>Mathematical Markup Language (MathML)</strong> is a dialect of <a href="/en-US/docs/Web/XML">XML</a> for describing mathematical notation and capturing both its structure and content.</p>
 
 <p>Here you'll find links to documentation, examples, and tools to help you work with this powerful technology. For a quick overview, see the <a href="https://fred-wang.github.io/MozSummitMathML/index.html">slides for the innovation fairs at Mozilla Summit 2013</a>.</p>
 
