--- a/files/en-us/web/mathml/element/msubsup/index.html
+++ b/files/en-us/web/mathml/element/msubsup/index.html
@@ -39,7 +39,7 @@ browser-compat: mathml.elements.msubsup
 
 <p>Sample rendering: <img alt="x1" src="msubsup.png"></p>
 
-<p>Rendering in your browser: <math displaystyle="true"> <msubsup> <mo> ∫</mo> <mn> 0 </mn> <mn> 1 </mn> </msubsup> </math></p>
+<p>Rendering in your browser: <math> <msubsup> <mo> ∫</mo> <mn> 0 </mn> <mn> 1 </mn> </msubsup> </math></p>
 
 <pre class="brush: html">&lt;math displaystyle="true"&gt;
 
