--- a/files/en-us/web/mathml/examples/mathml_pythagorean_theorem/index.html
+++ b/files/en-us/web/mathml/examples/mathml_pythagorean_theorem/index.html
@@ -35,95 +35,95 @@ tags:
   </math>.</p>
 
 <p><strong>Proof:</strong>  We can prove the theorem algebraically by showing that the area of the big square
-  equals the area of the inner square (hypotenuse squared) plus the area of the four triangles: <math
-    style="display: block;">
-    <mtable columnalign="right center left">
-      <mtr>
-        <mtd>
-          <msup>
-            <mrow>
-              <mo> ( </mo>
-              <mi> a </mi>
-              <mo> + </mo>
-              <mi> b </mi>
-              <mo> ) </mo>
-            </mrow>
-            <mn> 2 </mn>
-          </msup>
-        </mtd>
-        <mtd>
-          <mo> = </mo>
-        </mtd>
-        <mtd>
-          <msup>
-            <mi> c </mi>
-            <mn>2</mn>
-          </msup>
-          <mo> + </mo>
-          <mn> 4 </mn>
-          <mo> ⋅ </mo>
-          <mo>(</mo>
-          <mfrac>
-            <mn> 1 </mn>
-            <mn> 2 </mn>
-          </mfrac>
-          <mi> a </mi>
-          <mi> b </mi>
-          <mo>)</mo>
-        </mtd>
-      </mtr>
-      <mtr>
-        <mtd>
-          <msup>
+  equals the area of the inner square (hypotenuse squared) plus the area of the four triangles:</p>
+
+<math>
+  <mtable columnalign="right center left">
+    <mtr>
+      <mtd>
+        <msup>
+          <mrow>
+            <mo> ( </mo>
             <mi> a </mi>
-            <mn>2</mn>
-          </msup>
-          <mo> + </mo>
+            <mo> + </mo>
+            <mi> b </mi>
+            <mo> ) </mo>
+          </mrow>
           <mn> 2 </mn>
+        </msup>
+      </mtd>
+      <mtd>
+        <mo> = </mo>
+      </mtd>
+      <mtd>
+        <msup>
+          <mi> c </mi>
+          <mn>2</mn>
+        </msup>
+        <mo> + </mo>
+        <mn> 4 </mn>
+        <mo> ⋅ </mo>
+        <mo>(</mo>
+        <mfrac>
+          <mn> 1 </mn>
+          <mn> 2 </mn>
+        </mfrac>
+        <mi> a </mi>
+        <mi> b </mi>
+        <mo>)</mo>
+      </mtd>
+    </mtr>
+    <mtr>
+      <mtd>
+        <msup>
           <mi> a </mi>
+          <mn>2</mn>
+        </msup>
+        <mo> + </mo>
+        <mn> 2 </mn>
+        <mi> a </mi>
+        <mi> b </mi>
+        <mo> + </mo>
+        <msup>
           <mi> b </mi>
-          <mo> + </mo>
-          <msup>
-            <mi> b </mi>
-            <mn>2</mn>
-          </msup>
-        </mtd>
-        <mtd>
-          <mo> = </mo>
-        </mtd>
-        <mtd>
-          <msup>
-            <mi> c </mi>
-            <mn>2</mn>
-          </msup>
-          <mo> + </mo>
-          <mn> 2 </mn>
-          <mi> a </mi>
-          <mi> b</mi>
-        </mtd>
-      </mtr>
-      <mtr>
-        <mtd>
-          <msup>
-            <mi>a </mi>
-            <mn>2</mn>
-          </msup>
-          <mo> + </mo>
-          <msup>
-            <mi> b </mi>
-            <mn>2</mn>
-          </msup>
-        </mtd>
-        <mtd>
-          <mo> = </mo>
-        </mtd>
-        <mtd>
-          <msup>
-            <mi> c </mi>
-            <mn>2</mn>
-          </msup>
-        </mtd>
-      </mtr>
-    </mtable>
-  </math>
-</p>
+          <mn>2</mn>
+        </msup>
+      </mtd>
+      <mtd>
+        <mo> = </mo>
+      </mtd>
+      <mtd>
+        <msup>
+          <mi> c </mi>
+          <mn>2</mn>
+        </msup>
+        <mo> + </mo>
+        <mn> 2 </mn>
+        <mi> a </mi>
+        <mi> b</mi>
+      </mtd>
+    </mtr>
+    <mtr>
+      <mtd>
+        <msup>
+          <mi>a </mi>
+          <mn>2</mn>
+        </msup>
+        <mo> + </mo>
+        <msup>
+          <mi> b </mi>
+          <mn>2</mn>
+        </msup>
+      </mtd>
+      <mtd>
+        <mo> = </mo>
+      </mtd>
+      <mtd>
+        <msup>
+          <mi> c </mi>
+          <mn>2</mn>
+        </msup>
+      </mtd>
+    </mtr>
+  </mtable>
+</math>
